# TOTP-Based-2FA-Authentication-System-FastAPI

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 164a53738e4f_initial_migration.py
app/: main.py
app/core/: config.py  exception_handlers.py  exceptions.py  logging.py  security.py
app/db/: base.py
app/dependencies/: auth.py
app/middleware/: __init__.py  middleware_setup.py  rate_limit.py  rate_limit_decorator.py
app/models/: __init__.py  users.py
app/repositories/: user_repository.py
app/routes/: auth.py
app/schemas/: users.py
app/services/: auth_service.py
app/tests/: conftest.py  test_auth.py
app/utils/: __init__.py  helpers.py  ratelimiter.py  totp.py
